--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,4 +2,5 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
   "Oxygen", "Ubuntu", "San Francisco", Arial, sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol";
+  line-height: 24px;
 }
