Improve lighthouse score

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,4 +3,5 @@ body {
   "Oxygen", "Ubuntu", "San Francisco", Arial, sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 24px;
+  background-color: white;
 }
